<resources>
    <string name="app_name">Mobile App</string>
    <string name="john">Tuan Anh</string>
    <string name="hello">Hello</string>
    <string name="search_elements">Search elements</string>
    <string name="my_map_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA66KwUrjxcFG5u0exynlJ45CrbrNe3hEc</string>
    <string name="home">Home</string>
    <string name="graph">Graph</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="_30">30°</string>
    <string name="rainfall_mm">Rainfall (mm)</string>
    <string name="humidity">Humidity (%)</string>
    <string name="wind_speed_km_h">Wind speed (km/h)</string>
    <string name="attribute_names">Attribute Names:</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="explore_a_healthier_lifestyle">Explore a Healthier Lifestyle</string>
    <string name="where_health_meets">Where health meets the air you breathe – choose Air Quality for a smarter and healthier lifestyle.</string>
    <string name="get_start">Get Start</string>
    <string name="welcome_to_air_quality_">Welcome to Air Quality,\n your go-to application for real-time\n monitoring of air quality in your surroundings</string>
    <string name="discover_real_time_insights">Discover Real-Time Insights</string>
    <string name="empower_your_well_being">Empower Your Well-being</string>
    <string name="stay_updated_on_">Stay updated on air health,\n track changes, and proactively\n improve your living environment</string>
    <string name="hi">Hi, User!</string>
    <string name="hi_user">Hi, User!</string>
</resources>